[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asterix-decoder"
version = "0.7.10"
description = "ASTERIX (All Purpose STructured EUROCONTROL SuRveillance Information EXchange) decoder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
keywords = ["asterix", "eurocontrol", "radar", "track", "croatiacontrol", "aviation", "atm", "surveillance"]
authors = [
    {name = "Damir Salantic", email = "damir.salantic@gmail.com"},
]
maintainers = [
    {name = "montge"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
xml = ["lxml>=4.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "memory-profiler>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/montge/asterix"
Documentation = "https://montge.github.io/asterix/"
Repository = "https://github.com/montge/asterix"
Issues = "https://github.com/montge/asterix/issues"
Download = "https://github.com/montge/asterix"

[tool.setuptools]
# Use find to automatically discover all packages including subpackages
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
# Automatically find all packages including asterix.radar_integration, asterix.test, etc.
where = ["."]
include = ["asterix*"]

[tool.setuptools.package-data]
asterix = [
    "config/*.xml",
    "config/*.ini",
    "config/*.dtd",
    "sample_data/*.raw",
    "sample_data/*.pcap",
]

# C++ extension configuration remains in setup.py
# due to complex platform-specific compiler flags and library detection

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''

[tool.pytest.ini_options]
testpaths = ["asterix/test", "tests/python"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=asterix --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "visualization: marks tests requiring matplotlib",
    "benchmark: marks performance benchmark tests",
]

[tool.coverage.run]
omit = [
    "asterix/examples/*",
    "*/tests/*",
    "*/test/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if sys.version_info",
    "@abstractmethod",
]

[tool.cibuildwheel]
# Build for Python 3.10-3.13 (3.14 support pending cibuildwheel update)
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686"  # Skip 32-bit builds

[tool.cibuildwheel.linux]
# Force C++17 standard for manylinux compatibility (GCC 10 in devtoolset-10 doesn't support C++23)
[tool.cibuildwheel.linux.environment]
CXXFLAGS = "-std=c++17"

[tool.cibuildwheel.windows]
# Ensure vcpkg expat is installed and delvewheel is available before building
# Use forward slashes for Windows paths (Windows accepts both)
before-build = [
    "C:/vcpkg/vcpkg.exe install expat:x64-windows",
    "pip install delvewheel"
]
# Repair wheel to bundle libexpat.dll
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
# Set vcpkg environment variables for Windows builds (use forward slashes)
VCPKG_ROOT = "C:/vcpkg"
EXPAT_INCLUDE_DIR = "C:/vcpkg/installed/x64-windows/include"
EXPAT_LIB_DIR = "C:/vcpkg/installed/x64-windows/lib"
# Add vcpkg bin directory to PATH so delvewheel can find libexpat.dll
PATH = "C:/vcpkg/installed/x64-windows/bin;$PATH"

[tool.cibuildwheel.macos]
# Set macOS deployment target to ensure compatibility with older macOS versions
# This prevents the "Library dependencies do not satisfy target MacOS version" error
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.bandit]
# Security rule exclusions for test code:
# - B101 (assert_used) - assert is correct for unit tests
# - B110 (try_except_pass) - acceptable in test error-handling tests
# - B404 (import_subprocess) - required for cross-binding validation tests
# - B603 (subprocess_without_shell_equals_true) - subprocess calls are validated
# - B607 (start_process_with_partial_path) - using system node/cargo for tests
# These are enabled by default for production code via inline # nosec comments
skips = ["B101", "B110"]
exclude_dirs = [
    ".git",
    ".local",
    "build",
    "install",
    ".venv",
    "venv",
    "__pycache__",
    "asterix-node/node_modules",
]

[tool.bandit.assert_used]
# Even if B101 isn't skipped globally, exclude test files
exclude_dirs = ["asterix/test", "tests"]
