[package]
name = "asterix"
version = "0.1.0"
edition = "2021"
authors = ["ASTERIX Contributors"]
license = "GPL-3.0-or-later"
description = "Rust bindings for ASTERIX ATM surveillance protocol decoder"
repository = "https://github.com/CroatiaControlLtd/asterix"
documentation = "https://docs.rs/asterix"
readme = "README.md"
keywords = ["asterix", "aviation", "atm", "surveillance", "decoder"]
categories = ["aerospace", "parser-implementations", "encoding"]
rust-version = "1.70"

[lib]
name = "asterix"
path = "src/lib.rs"

[dependencies]
# FFI bridge for safe C++/Rust interop
cxx = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Logging
log = "0.4"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.7", features = ["html_reports"] }

# Testing
rstest = "0.18"
tempfile = "3.8"
env_logger = "0.11"

# Property-based testing
proptest = "1.4"

[build-dependencies]
# CXX code generation
cxx-build = "1.0"

# C++ compilation
cc = "1.0"

# System library detection
pkg-config = "0.3"

# File globbing
glob = "0.3"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
# Future: async parsing support
async = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "parser_benchmark"
harness = false
path = "benches/parser_benchmark.rs"

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

# Prevent multiple simultaneous builds of the C++ core
[package.metadata.system-deps]
links = "asterix"
