[package]
name = "asterix"
version = "0.1.0"
edition = "2021"
authors = ["ASTERIX Contributors"]
license = "GPL-3.0-or-later"
description = "Rust bindings for ASTERIX ATM surveillance protocol decoder"
repository = "https://github.com/CroatiaControlLtd/asterix"
documentation = "https://docs.rs/asterix"
readme = "README.md"
keywords = ["asterix", "aviation", "atm", "surveillance", "decoder"]
categories = ["aerospace", "parser-implementations", "encoding"]
rust-version = "1.88"

[lib]
name = "asterix"
path = "src/lib.rs"

[dependencies]
# FFI bridge for safe C++/Rust interop
cxx = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Logging
log = "0.4"

# Zenoh pub/sub transport (optional)
zenoh = { version = "1.7", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }

# DDS transport using RustDDS (optional)
rustdds = { version = "0.11", optional = true }

# D-Bus transport for Linux IPC (optional)
zbus = { version = "5.12", optional = true }

# CAN Bus transport via SocketCAN (optional, Linux only)
# Note: socketcan is a target-specific dependency, defined below

# CCSDS Space Packet Protocol transport (optional)
spacepackets = { version = "0.17", optional = true, default-features = false, features = ["std", "serde"] }
arbitrary-int = { version = "2", optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

# Testing
env_logger = "0.11"

[build-dependencies]
# CXX code generation
cxx-build = "1.0"

# C++ compilation
cc = "1.2"

# System library detection
pkg-config = "0.3"
vcpkg = "0.2"  # Windows vcpkg library detection (handles libexpatMD.lib naming)

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
# Zenoh pub/sub transport for edge-to-cloud ASTERIX distribution
zenoh = ["dep:zenoh", "dep:tokio"]
# DDS transport using native Rust DDS implementation (RTPS protocol)
dds = ["dep:rustdds", "dep:tokio"]
# D-Bus transport for Linux IPC and system services
dbus = ["dep:zbus"]
# CAN Bus transport via SocketCAN for automotive/embedded systems
can = ["dep:socketcan"]
# CCSDS Space Packet Protocol transport for space mission data
ccsds = ["dep:spacepackets", "dep:tokio", "dep:arbitrary-int"]
# Future: async parsing support
async = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "parse_benchmark"
harness = false
path = "benches/parse_benchmark.rs"

[[bench]]
name = "zenoh_benchmark"
harness = false
path = "benches/zenoh_benchmark.rs"
required-features = ["zenoh"]

[[bench]]
name = "dds_benchmark"
harness = false
path = "benches/dds_benchmark.rs"
required-features = ["dds"]

[[bench]]
name = "can_benchmark"
harness = false
path = "benches/can_benchmark.rs"
required-features = ["can"]

[[example]]
name = "ccsds_publisher"
path = "examples/ccsds_publisher.rs"
required-features = ["ccsds"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

# Prevent multiple simultaneous builds of the C++ core
[package.metadata.system-deps]
links = "asterix"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", optional = true }
